fixed responsiveness on small screen

--- a/style/style.css
+++ b/style/style.css
@@ -103,6 +103,48 @@
         border: none;
         cursor: pointer;
     }
+    @media(max-width:991px){
+        .custom_card{
+            background-color: rgb(235, 250, 209);
+            border-radius: 10px;
+            box-shadow: 0 6px 10px 2px rgba(0, 0, 0, 0.2);
+            min-width: 14rem;
+            max-width: 14rem;
+            max-height: 25rem;
+            min-height: 25rem;
+            position: relative;
+            border: none;
+            cursor: pointer;
+        }
+    }
+    @media(max-width:765px){
+        .custom_card{
+            background-color: rgb(235, 250, 209);
+            border-radius: 10px;
+            box-shadow: 0 6px 10px 2px rgba(0, 0, 0, 0.2);
+            min-width: 16rem;
+            max-width: 16rem;
+            max-height: 25rem;
+            min-height: 25rem;
+            position: relative;
+            border: none;
+            cursor: pointer;
+        }
+    }
+    @media(max-width:535px){
+        .custom_card{
+            background-color: rgb(235, 250, 209);
+            border-radius: 10px;
+            box-shadow: 0 6px 10px 2px rgba(0, 0, 0, 0.2);
+            min-width: 18rem;
+            max-width: 18rem;
+            max-height: 25rem;
+            min-height: 25rem;
+            position: relative;
+            border: none;
+            cursor: pointer;
+        }
+    }
     .custom_card .wishlist_btn{
         position: absolute;
         color: green;
